@@ -54,7 +54,7 @@ sudo apt-get update
 sudo apt-get install r-base r-base-core r-base-dev libcairo2-dev libxt-dev r-cran-ggplot2 r-cran-dbi \
                      r-cran-cairodevice r-cran-reshape r-cran-digest postgresql postgresql-client \
                      postgresql-server-dev-9.3 postgresql-contrib pgbouncer libboost-all-dev libtool \
-                     libpqxx-dev apache2-mpm-prefork apache2-prefork-dev git libapache2-mod-r-base
+                     libpqxx-dev apache2-mpm-prefork apache2-prefork-dev git libapache2-mod-r-base libyaml-tiny-perl
 
 1.2.2. Additional R packages
 
@@ -68,7 +68,7 @@ install.packages("name", repos='http://cran.rstudio.com/')
 Install:
 
 sudo R
-install.packages(c("brew","Cairo","googleVis","RPostgreSQL","R.utils","yaml"))
+install.packages(c("brew","Cairo","googleVis","RPostgreSQL","R.utils","yaml", "dplyr"))
 q()
 
 If you are prompted to save workspace image y/n/c, choose no.
@@ -81,6 +81,7 @@ googleVis	0.5.5
 RPostgreSQL	0.4
 R.utils	1.33.0
 yaml	2.1.13
+dplyr	0.4.1
 
 1.3. Install Hedgehog
 1.3.1. Install and build code
@@ -148,7 +149,7 @@ See the "Plot Caching" section in the user guide for a more detailed description
 www:
   default_plot_type             : interactive # 'static'      -> png plots
                                               # 'interactive' -> googlevis plots
-  default_interactive_plot_type : flash       # 'flash' -> plot requires flash
+  default_interactive_plot_type : svg         # 'flash' -> plot requires flash
                                               # 'svg'   -> plot is SVG/VML and does not require flash
                                               # (but with svg plots some legends do not wrap properly)
   use_plot_caching              : 1           # '1' -> true, use cached plots when possible
